@@ -253,11 +253,6 @@
   ;; CLISP extends DISASSEMBLE to accept STRINGs, METHODs, and forms
   DISASSEMBLE.ERROR.3
 
-  ;; ANSI specifies no exceptional situations for MAKE-CONDITION,
-  ;; but allows any subtype of CONDITION, like (OR PROGRAM-ERROR TYPE-ERROR)
-  ;; and (AND SIMPLE-ERROR TYPE-ERROR)
-  MAKE-CONDITION.3 MAKE-CONDITION.4
-
   ;; To be revisited:
 
 ))
